2003-10-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: readded missing gcompris-edit.desktop.in
	* boards/Makefile.am: added experimental redraw.py board
	* boards/redraw.xml.in: added experimental redraw.py
	* src/boards/python/redraw.py: added experimental redraw.py
	* src/gcompris/about.c: (gcompris_about_start): added Background Music: Rico Da Halvarez.

2003-10-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: re-removed installation of *.in files
	* configure.in: fixed creation of REQUIRE_PYTHON. Now python is compiled by default.

2003-10-24  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am:
	* configure.in: release 4.1

2003-10-24  Christian Rose  <menthos@menthos.com>

	* po-checktrans, po-checktrans.py: Removed. No need to have these
	in the module, just use "intltool-update --report" instead.

2003-10-23  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/pythontest.xml.in: set to difficulty 0
	* configure.in: flags and pt-geography set to version 1.1
	* gcompris.spec.in: flags now uses configure.in
	* po/fr.po: wrapped lines
	* src/boards/menu.c: (display_board_icon), (menu_create_item):
	* src/boards/python/Makefile.am: added support for gcompris --dificulty option
	* src/gcompris/gcompris.c: (gcompris_init): added support for -d option
	* src/gcompris/properties.c: (gcompris_properties_new),
	(gcompris_properties_copy): added support for -d option
	* src/gcompris/properties.h: added support for -d option

2003-10-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: Now include boards/*.in files in the dist so that translator
	  can test their po file without getting the cvs
	* boards/dataset/mrpatate.xml: added images
	* boards/flags/sl.png: added slovenian flag
	* boards/flags/gcompris_flags.xml.in: added slovenian flag
	* boards/gcompris/animals/elephanteauxgc.jpg: animal image given by 
	* LE BERRE Daniel <le.berred@free.fr> : released under GPL
	* boards/gcompris/animals/hypogc.jpg: animal image given by 